--- a/verslag/Verslag_autosharing.tex
+++ b/verslag/Verslag_autosharing.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 12pt, one column]{article}
+\documentclass[a4paper, 11pt, one column]{article}
 
 %% Language and font encodings. This says how to do hyphenation on end of lines.
 \usepackage[dutch]{babel}
@@ -123,7 +123,7 @@ In deze sectie gaan we het kort hebben over de verschillende metaheuristieken di
 
 Hierbij beginnen we met een start temperatuur van 300 na 1000 iteraties wordt deze gedeeld door 1,3 totdat we een minimum temperatuur 5 of kleiner bereiken of we voor 500 iteraties niet verbeteren.
 Nadat de local search stopt herbeginnen we met een andere initiele oplossing. Deze versie bevat ook een simplistische threshold die niet van waarde verandert behalve als we vast komen te zitten,
-hetzelfde gebeurt bij de temperatuur. Deze verhoogt als we falen om een betere oplossing te vinden.
+hetzelfde gebeurt bij de temperatuur. Deze verhoogt als we falen om een betere oplossing te vinden. De resultaten hiervan zijn te zien op grafiek \ref{360_res} als v6.
 
 \subsection{Thresholding (v7)}
 
